@@ -1,3 +1,8 @@
+2011-07-11  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* imap/pop3d.dist.in: Add AUTHSERVICE settings. They've been supported
+	all along.
+
 2011-07-05  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* courier.spec.in: Fix rpmlint warnings
