@@ -1,3 +1,8 @@
+2011-07-11  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* pop3d.dist.in: Add AUTHSERVICE settings. They've been supported
+	all along.
+
 2011-06-19  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Fix gcc 4.6 warnings
